--- a/styles/common-main.css
+++ b/styles/common-main.css
@@ -28,12 +28,14 @@ header {
 }
 
 header h1 {
-    font-family: sans-serif;
+    font-family: 'Zeyada', sans-serif;
     font-weight: 100;
     font-size: 100px;
+    text-align: center;
+
     width: fit-content;
     color: white;
-    padding: 10px;
+    padding: 30px 10px 0 10px;
 }
 
 /* ======================================= */
@@ -82,6 +84,16 @@ footer .icons {
 
 footer .icons:hover {
     transform: scale(1.2);
+}
+
+footer #icon-ig {
+    width: 70px;
+    height: 70px;
+}
+
+footer #icon-twitter {
+    width: 80px;
+    height: 80px;
 }
 
 /* contact */
@@ -159,7 +171,7 @@ button {
 
     background-color: orange;
     color: black;
-    border-radius: 20%;
+    border-radius: 30px;
     transition: 400ms ease;
     cursor: pointer;
 }
