--- a/styles/my-bootstrap.css
+++ b/styles/my-bootstrap.css
@@ -6,18 +6,21 @@
     font-family: 'Zeyada';
     font-size: 40px;
     font-weight: 100;
+
+    padding: 20px 10px 10px 10px;
     color: yellow;
 }
 
 /* burger btn */
 .navbar-toggler {
     background-color: black;
+    border: none;
     transition: 500ms ease-out;
 }
 
 .navbar-toggler:hover,
 .navbar-toggler:focus {
-    background-color: rgb(186, 99, 0);
+    background-color: lightgrey;
 }
 
 /* side navbar */
@@ -25,9 +28,22 @@
     width: fit-content;
 }
 
+.navbar-nav {
+    padding: 20px 10px;
+}
+
+/* .offcanvas-body {
+    padding: 10px 0;
+} */
+
 /* ================================================== */
 
 /* CARDS*/
+.bg-body-secondary {
+    padding: 0;
+}
+
+
 .card-group {
     /* background-color: yellow;  */
     margin-bottom: 30px;
@@ -50,12 +66,12 @@
 }
 
 .card {
-    box-shadow: 2px 2px 10px orangered;
-    background-color: black;
-    color: white;
+    box-shadow: 1px 1px 10px black;
+    background-color: white;
+    color: black;
 
     margin: 30px;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     border-radius: 30px;
     transition: 700ms ease;
 }
@@ -83,17 +99,22 @@
 
 /* SIDE CARD */
 .bg-body-secondary {
-    background-color: orange !important;
+    background-color: rgb(202, 132, 2) !important;
     padding: 10px 20px;
-    margin-bottom: 10vh;
+    margin: 10vh 5vh;
+    /* margin-bottom: 10vh; */
+    /* height: 80vh; */
+    width: 80vw;
 }
 
 .w-100 {
-    width: 70% !important;
-    height: 400px;
+    width: 90% !important;
+    height: 70vh;
+    /* height: 100%; */
     object-fit: cover;
 
-    margin: 30px 10px;
+    margin: 20px 0;
+    /* margin: 30px 10px; */
 }
 
 /* ================================================== */
@@ -107,5 +128,24 @@
     width: fit-content;
     /* margin: 10px; */
 }
+
+.form-control:focus {
+    border: 1px solid blue;
+}
+
+/* ================================================== */
+
+/* MODAL */
+/* #exampleModal {
+    background-color: black;
+} */
+
+/* modal-btn */
+
+/* modal */
+.modal-body {
+    background-color: black;
+}
+
 
 /* ================================================== */
