--- a/styles/common1.css
+++ b/styles/common1.css
@@ -24,11 +24,11 @@
 }
 
 /* social media icons */
-.social-media {
+/* .social-media {
     position: relative;
     left: -8vw;
     padding-left: 5vw;
-}
+} */
 
 .social-media li {
     display: inline;
