--- a/styles/style-shop.css
+++ b/styles/style-shop.css
@@ -62,6 +62,7 @@ main img {
     background-color: white;
     color: black;
     padding: 20px;
+    margin-top: 8vh;
 }
 
 #go-to-checkout button:hover {
